Actions
Bug #11806
closedSMB server sends malformed responses on error
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
The SMB2 dispatch code can emit partially constructed responses if a request handler returns SDRC_ERROR. This is easily observed over WireShark when running the WPTS (Windows Protocol Test Suites). One particular test case shows this very clearly: the InvalidCreateRequestStructureSize test found in the CreateClose section. Attached is a packet capture showing this.
Files
Updated by Andrew Stormont over 2 years ago
Updated by Andrew Stormont over 2 years ago
Updated by Electric Monk over 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 541826a8134c92e67fc603ded1699287feb4cca2
commit 541826a8134c92e67fc603ded1699287feb4cca2 Author: Andrew Stormont <astormont@racktopsystems.com> Date: 2019-10-19T16:50:07.000Z 11806 SMB server sends malformed responses on error Reviewed by: Vitaliy Gusev <vgusev@racktopsystems.com> Reviewed by: Gordon Ross <Gordon.W.Ross@gmail.com> Reviewed by: Garrett D'Amore <gdamore@racktopsystems.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions