11806 SMB server sends malformed responses on error Reviewed by: Vitaliy Gusev <vgusev@racktopsystems.com> Reviewed by: Gordon Ross <Gordon.W.Ross@gmail.com> Reviewed by: Garrett D'Amore <gdamore@racktopsystems.com> Approved by: Dan McDonald <danmcd@joyent.com>